<resources>
    <string name="app_name">AustinEatApp</string>

    <string name="title">Austin Eat!</string>
    <string name="signOutButton">Sign out</string>
    <string name="signStatus">You are not signed in now</string>
    <string name="introductionApp">The world\'s Greatest Food Delivery APP(TM). By APT Warbler.</string>
    <string name="viewStreamsButton">View Streams</string>

    <string name="root_url">http://10.0.2.2:8080</string>
    <!--string name="root_url">https://austineat-186301.appspot.com</string-->
    <string name="wallet_url">/wallet</string>
    <string name="topup_url">/topup</string>
    <string name="balance_url">/balance</string>
    <string name="wallet_title">My Balance</string>
    <string name="wallet_input_hint">Amount to top up</string>
    <string name="wallet_top_up">Top Up</string>
    <string name="wallet_init_msg">Waiting payment service to be initialized, try again.</string>
    <string name="wallet_success_msg">Payment succeeded!</string>
    <string name="wallet_fail_msg">Sorry man, payment failed.</string>
    <string name="title_activity_profile">Austin Eat!</string>
    <string name="title_home">Discover</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profile</string>

    <string name="loading">loading...</string>
    <string name="deliver_rate">Deliver Rate</string>
    <string name="eater_rate">Eater Rate</string>
    <string name="profile_intro">Introduction</string>
    <string name="profile_ffs">Favorite Food Style</string>
    <string name="profile_ff">Favorite Food</string>
    <string name="profile_ah">Activity History</string>
    <string name="profile_wallet">Wallet</string>
    <string name="profile_edit">Edit</string>

    <string name="profile_url">/profile</string>

    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="edit_profile_save">Save</string>
    <string name="edit_profile_url">/edit-profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_property_message">Please request or pull an order.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_client_id">968428520381-t2hem4uacmao4vug2ml1k9m9qmujpf4r.apps.googleusercontent.com</string>

</resources>
