<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="warbler.austineatapp.WalletActivity">

    <TextView
        android:id="@+id/walletTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wallet_title"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/walletBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletTitle" />

    <EditText
        android:id="@+id/walletInputAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/wallet_input_hint"
        android:inputType="number"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/walletTopUp"
        app:layout_constraintLeft_toRightOf="@+id/dollarSign"
        app:layout_constraintRight_toLeftOf="@+id/walletTopUp" />

    <Button
        android:id="@+id/walletTopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="setupBraintreeAndStartExpressTopup"
        android:text="@string/wallet_top_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="$"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/walletTopUp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
